--- a/111.ini
+++ b/111.ini
@@ -70,8 +70,8 @@ custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singa
 custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇮🇳 印度节点`url-test`(🇮🇳|印度)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇧🇷 巴西节点`url-test`(🇧🇷|巴西)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇩🇪 德国节点`url-test`(🇩🇪|德国)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇫🇷 法国节点`url-test`(🇫🇷|法国)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇩🇪 德国2节点`url-test`(🇩🇪|德国2)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇫🇷 法国3节点`url-test`(🇫🇷|法国3)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇬🇧 英国节点`url-test`(🇬🇧|英国)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇪🇸 西班牙节点`url-test`(🇪🇸|西班牙)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|流媒体|Netflix|NETFLIX|巴西|Media)
