--- a/111.ini
+++ b/111.ini
@@ -42,13 +42,13 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇧🇷 巴西节点`[]🇩🇪 德国2节点`[]🇫🇷 法国3节点`[]🇬🇧 英国节点`[]🇪🇸 西班牙节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇧🇷 巴西节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇬🇧 英国节点`[]🇪🇸 西班牙节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇧🇷 巴西节点`[]🇩🇪 德国2节点`[]🇫🇷 法国3节点`[]🇬🇧 英国节点`[]🇪🇸 西班牙节点`[]🚀 手动切换`[]DIRECT`.*
-custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇧🇷 巴西节点`[]🇩🇪 德国2节点`[]🇫🇷 法国3节点`[]🇬🇧 英国节点`[]🇪🇸 西班牙节点`[]🚀 手动切换`[]DIRECT`.*
-custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇧🇷 巴西节点`[]🇩🇪 德国2节点`[]🇫🇷 法国3节点`[]🇬🇧 英国节点`[]🇪🇸 西班牙节点`[]🚀 手动切换`[]DIRECT`.*
-custom_proxy_group=🎥 奈飞视频`select`[]🎥 奈飞节点`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇧🇷 巴西节点`[]🇩🇪 德国2节点`[]🇫🇷 法国3节点`[]🇬🇧 英国节点`[]🇪🇸 西班牙节点`[]🚀 手动切换`[]DIRECT`.*
+custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇧🇷 巴西节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇬🇧 英国节点`[]🇪🇸 西班牙节点`[]🚀 手动切换`[]DIRECT`.*
+custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇧🇷 巴西节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇬🇧 英国节点`[]🇪🇸 西班牙节点`[]🚀 手动切换`[]DIRECT`.*
+custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇧🇷 巴西节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇬🇧 英国节点`[]🇪🇸 西班牙节点`[]🚀 手动切换`[]DIRECT`.*
+custom_proxy_group=🎥 奈飞视频`select`[]🎥 奈飞节点`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇧🇷 巴西节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇬🇧 英国节点`[]🇪🇸 西班牙节点`[]🚀 手动切换`[]DIRECT`.*
 custom_proxy_group=📺 巴哈姆特`select`[]🇨🇳 台湾节点`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇨🇳 台湾节点`[]🇭🇰 香港节点
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
@@ -70,11 +70,11 @@ custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singa
 custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇮🇳 印度节点`url-test`(🇮🇳|印度)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇧🇷 巴西节点`url-test`(🇧🇷|巴西)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇩🇪 德国2节点`url-test`(|德国2)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇫🇷 法国3节点`url-test`(|法国3)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇩🇪 德国节点`url-test`(🇩🇪|德国)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇫🇷 法国节点`url-test`(🇫🇷|法国)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇬🇧 英国节点`url-test`(🇬🇧|英国)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇪🇸 西班牙节点`url-test`(🇪🇸|西班牙)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|流媒体|Netflix|NETFLIX|巴西|Media)
+custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|流媒体|Netflix|NETFLIX|Media)
 ;设置分组标志位
 
 enable_rule_generator=true
